<resources>
    <string name="app_name">TRB2 Lucia</string>
    <string name="cadastrar">Novo:</string>
    <string name="excluir">Excluir</string>
    <string name="tags">vizualizar</string>
    <string name="organizador">Organizador de Tarefas:</string>
    <string name="titulo">Titulo:</string>
    <string name="descricao">Descricao</string>
    <string name="cadastarTarefa">Cadastrar</string>
    <string name="cadGrau" />
    <string name="cadGrauD">Grau:</string>
    <string name="cadDescricao">Descricao:</string>
    <string name="cadEstado">Estado:</string>
    <string name="cadData">Data Limite:</string>
    <string name="textview">Lista de Tarefas</string>
    <string name="desEtiqueta">Informe a tag:</string>
    <string name="btcadEti">Cadastrar</string>
    <string name="listat">Lista</string>
    <string name="tituloTags">Tags:</string>
</resources>
